// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component transforms svg 1`] = `
"import React from 'react'
import Icon from './Icon'

const Icon = props => (
  <Icon width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" {...props}>
    <path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\" />
  </Icon>
)

Icon.defaultProps = {name: 'Icon'}

export default Icon
"
`;

exports[`component transforms svg with options 1`] = `
"import React from 'react'
import Icon from 'base-icon'

const Component = props => (
  <Icon width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" {...props}>
    <path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\" />
  </Icon>
)

Component.defaultProps = {name: 'Component'}

export default Component
"
`;
